--- a/slide-in-on-scroll/slide.css
+++ b/slide-in-on-scroll/slide.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 html {
   box-sizing: border-box;
-  background: #ffc600;
+  background: #d7f2c4;
   font-family: 'helvetica neue';
   font-size: 20px;
   font-weight: 200;
